# parallalg

./: .clang-format  .gitignore  .travis.yml  README.md  ci.sh
shared/: cl_utils.h  extend_to_multiple.h  matrix.h  open_cl.h  opencl.h  shared.mk  utils.h
week_01/matrix_multiplication/: mat_mul_ocl.c  vec_mul.cl
week_02/: .gitignore
week_02/matrix_multiplication/: Makefile  mat_mul.cl  mat_mul_ocl.c  mat_mul_omp.c  mat_mul_seq.c  measure.sh  measure.txt
week_03/heat_stencil/: Makefile  heat_stencil.cl  heat_stencil_ocl  heat_stencil_ocl.c  heat_stencil_omp  heat_stencil_omp.c  heat_stencil_seq  heat_stencil_seq.c
week_03/heat_stencil/heat_stencil/: Cargo.toml
week_03/heat_stencil/heat_stencil/src/: benchmark.rs  main.rs  main_ocl.rs  main_par.rs  main_seq.rs  print_temperature.rs
week_04/matrix_multiplication_profiling/: Makefile  benchmark.md  mat_mul.cl  mat_mul_ocl.c  mat_mul_omp.c  mat_mul_seq.c
week_05/: benchmark.md
week_05/heat_stencil/: Makefile  heat_stencil.cl  heat_stencil_ocl.c  heat_stencil_ocl.exe.stackdump  heat_stencil_omp.c  heat_stencil_seq.c
week_06/: kernel.cl
week_06/recursive_multistage_reduction/: Makefile  benchmark.md  omp.c  parallel_reduction.cl  parallel_reduction_ocl.c  parallel_reduction_omp.c  reduction_ocl.c  (+4 more)
week_06/recursive_multistage_reduction-rs/: Cargo.toml
week_06/recursive_multistage_reduction-rs/src/: benchmark.rs  main_ocl.rs  main_par.rs  main_seq.rs  random_bytes.rs
week_08/: count.cl  count_sort.cl  downsweep.cl  hillissteele.cl  people.c  people.h  prefixglobal.cl
week_08/count_sort-rs/: Cargo.toml  build.rs
week_08/count_sort-rs/src/: hillis_steele.rs  main_par.rs  main_seq.rs  name_generator.rs  person.rs
week_10/: zusammenfassung.md
(+57 files in other folders)
